--- a/stopwatch/package.json
+++ b/stopwatch/package.json
@@ -2,6 +2,7 @@
   "name": "stopwatch",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yourusername.github.io/reactprojects.github.io/stopwatch",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -35,4 +37,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
