--- a/stopwatch/package.json
+++ b/stopwatch/package.json
@@ -2,7 +2,7 @@
   "name": "stopwatch",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://yourusername.github.io/reactprojects.github.io/stopwatch",
+  "homepage": "https://kyleklh.github.io/reactprojects.github.io/stopwatch",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
